--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cn.smile</groupId>
-    <artifactId>surfing-concurrency</artifactId>
+    <artifactId>effective-io</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
