--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,12 @@
             <artifactId>guava</artifactId>
             <version>28.0-jre</version>
         </dependency>
-
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.29.Final</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
